[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://battle.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/minimap.tscn" id="2"]

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="WorldMapPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 480.0
offset_bottom = 400.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="UnitSprite" type="ColorRect" parent="WorldMapPanel"]
offset_left = 200.0
offset_top = 150.0
offset_right = 220.0
offset_bottom = 170.0
color = Color(0, 1, 0, 1)

[node name="BuildingSprite" type="ColorRect" parent="WorldMapPanel"]
offset_left = 100.0
offset_top = 100.0
offset_right = 140.0
offset_bottom = 120.0
color = Color(0.5, 0.5, 0.5, 1)

[node name="UIPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 480.0
offset_right = 640.0
offset_bottom = 400.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="MinimapPanel" type="Panel" parent="UIPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 130.0
offset_bottom = 130.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3")

[node name="Minimap" parent="MinimapPanel" instance=ExtResource("2")]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 115.0
offset_bottom = 115.0

[node name="ResourcesLabel" type="Label" parent="UIPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 140.0
offset_right = 140.0
offset_bottom = 160.0
text = "Gold: 1000
Wood: 500"
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="BuildButton" type="Button" parent="UIPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 170.0
offset_right = 60.0
offset_bottom = 200.0
text = "Build"

[node name="TrainButton" type="Button" parent="UIPanel"]
layout_mode = 0
offset_left = 70.0
offset_top = 170.0
offset_right = 120.0
offset_bottom = 200.0
text = "Train"

[node name="MoveButton" type="Button" parent="UIPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 210.0
offset_right = 60.0
offset_bottom = 240.0
text = "Move"

[node name="AttackButton" type="Button" parent="UIPanel"]
layout_mode = 0
offset_left = 70.0
offset_top = 210.0
offset_right = 120.0
offset_bottom = 240.0
text = "Attack"

[node name="TestMinimapButton" type="Button" parent="UIPanel"]
layout_mode = 0
offset_left = 130.0
offset_top = 250.0
offset_right = 240.0
offset_bottom = 280.0
text = "Test Minimap"

[node name="TestSquadButton" type="Button" parent="UIPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 290.0
offset_right = 120.0
offset_bottom = 320.0
text = "Test Squad"

[node name="SaveLoadButton" type="Button" parent="UIPanel"]
layout_mode = 0
offset_left = 130.0
offset_top = 290.0
offset_right = 240.0
offset_bottom = 320.0
text = "Save/Load"

[node name="TestSaveLoadButton" type="Button" parent="UIPanel"]
layout_mode = 0
offset_left = 250.0
offset_top = 290.0
offset_right = 360.0
offset_bottom = 320.0
text = "Test Save/Load"

[node name="BackButton" type="Button" parent="UIPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 350.0
offset_right = 60.0
offset_bottom = 380.0
text = "Back"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.3, 0.1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.2, 0.2, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0, 0, 0, 1)
